--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
 <!-- Write your HTML in this file -->
+
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    Content
+    
+    
+  </body>
+  
+  
+</html>
